Update wishlist
