# src/controllers/wishlist.js
@@ -1,6 +1,7 @@
 const response = require('../response');
 const {
   findWishlist,
+  findWishlistById,
   createWishlist,
   updateWishlist,
   deleteWishlist,
@@ -15,6 +16,23 @@ const getAllWishlist = async (req, res) => {
     response(500, 'invalid', 'error when get all wishlist items', res);
   }
 };
+
+const getDetailWishlist = async (req, res) => {
+  try {
+    const wishlistId = parseInt(req.params.wishlistId);
+    const wishlistItem = await findWishlistById(wishlistId);
+
+    if (!wishlistItem) {
+      return response(404, `Can't find wishlist item`, `Wishlist item doesn't exist`, res);
+    }
+
+    response(200, wishlistItem, 'Success get wishlist item by Id', res);
+  } catch (error) {
+    console.log(error);
+    response(500, 'invalid', 'error when get detail wishlist item', res);
+  }
+};
+
 
 const addWishlist = async (req, res) => {
   try {
@@ -62,7 +80,9 @@ const deletedWishlistItem = async (req, res) => {
 
 module.exports = {
   getAllWishlist,
+  getDetailWishlist,
   addWishlist,
   updatedWishlistItem,
   deletedWishlistItem,
+  
 };
